--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
+
 <head>
+    <title>iView admin v1.3.1</title>
     <meta charset="UTF-8">
-    <title>Hello SpringBoot Web</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+    <link rel="stylesheet" href="./dist/main.28598f9309ff14122085.css">
+    <link rel="stylesheet" name="theme" href="">
 </head>
+
 <body>
-
-<h1>Hello SpringBoot Web</h1>
-
+    <div id="app"></div>
+    <div class="lock-screen-back" id="lock_screen_back"></div>
+    <script type="text/javascript" src="./dist/vender-base.28598f9309ff14122085.js"></script>
+    <script type="text/javascript" src="./dist/vender-exten.28598f9309ff14122085.js"></script>
+    <script type="text/javascript" src="./dist/main.28598f9309ff14122085.js"></script>
 </body>
+
 </html>
